[gd_scene load_steps=17 format=3 uid="uid://c53c8e22d528s"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Garden Center/PlantCaringMinigame/watering_can.gd" id="1_mjs1g"]
[ext_resource type="Texture2D" uid="uid://vqiin0vtmy4l" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/WateringCan/watering_can.png" id="1_xg80m"]
[ext_resource type="Texture2D" uid="uid://dm2uhuxvu0q74" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/WateringCan/watering_can_selected.png" id="2_wxx7p"]
[ext_resource type="Texture2D" uid="uid://c57thr7gdo32h" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/WateringCan/watering_can_anim1.png" id="3_chst4"]
[ext_resource type="Texture2D" uid="uid://dxks7d3g0pnw3" path="res://Assets/Art/Environment/Rooms/Garden Center/Minigames/PlantCare/WateringCan/watering_can_anim2.png" id="4_16nyr"]
[ext_resource type="AudioStream" uid="uid://2x31ikjd6u6a" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakerpour_var2.mp3" id="6_y68df"]
[ext_resource type="AudioStream" uid="uid://bgi8re8ixi1v" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakerpour_var3.mp3" id="7_0gby3"]
[ext_resource type="AudioStream" uid="uid://4jn1hqfjg8gj" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_watersloshing_var1.mp3" id="8_0flil"]
[ext_resource type="AudioStream" uid="uid://gx0o4f5bq21g" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_watersloshing_var2.mp3" id="9_r74e1"]
[ext_resource type="AudioStream" uid="uid://bv85fsmky476u" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_watersloshing_var3.mp3" id="10_i6vhg"]
[ext_resource type="AudioStream" uid="uid://cx7pb5lv7ea31" path="res://Assets/Sound/SFX/Foley/Laboratory/sfx_laboratory_foley_beakerpourstop_var1.mp3" id="11_ktqln"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ibnwg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_xg80m")
}, {
"duration": 1.0,
"texture": ExtResource("2_wxx7p")
}],
"loop": true,
"name": &"standing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chst4")
}, {
"duration": 1.0,
"texture": ExtResource("4_16nyr")
}],
"loop": true,
"name": &"watering",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxdpl"]
size = Vector2(302, 296)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spjcr"]
size = Vector2(298, 460)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sinve"]
streams_count = 2
stream_0/stream = ExtResource("6_y68df")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_0gby3")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rxmyq"]
streams_count = 3
stream_0/stream = ExtResource("8_0flil")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_r74e1")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_i6vhg")
stream_2/weight = 1.0

[node name="Watering Can" type="Node2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_mjs1g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -3)
sprite_frames = SubResource("SpriteFrames_ibnwg")
animation = &"standing"

[node name="WaterArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterArea"]
position = Vector2(-161.333, -154.667)
shape = SubResource("RectangleShape2D_fxdpl")

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
position = Vector2(139, 0)
shape = SubResource("RectangleShape2D_spjcr")

[node name="Watering" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sinve")

[node name="Sloshing" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_rxmyq")
volume_db = 3.0

[node name="StopPouring" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ktqln")
volume_db = 3.0
bus = &"SFX_Foley"

[connection signal="area_entered" from="WaterArea" to="." method="_on_water_area_area_entered"]
[connection signal="area_exited" from="WaterArea" to="." method="_on_water_area_area_exited"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_area_mouse_exited"]
